# corkscrew

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
corkscrew/: __init__.py  analyzer.py  cli.py
samples/gcp/organic/: firewall.tf  iam.tf  instances.tf  main.tf
samples/gcp/synthetic/: main.tf
samples/organic/: iam.tf  main.tf  security_groups.tf
samples/synthetic/: main.tf
tests/: __init__.py  test_analyzer.py
