[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corkscrew"
version = "0.1.0"
description = "AWS Terraform Synthetic Network Detector - Identifies honeypot/synthetic infrastructure"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "aaron-philipp"}
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-hcl2>=4.0",
]

[project.scripts]
corkscrew = "corkscrew.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/aaron-philipp/corkscrew"
Repository = "https://github.com/aaron-philipp/corkscrew"
Issues = "https://github.com/aaron-philipp/corkscrew/issues"
Changelog = "https://github.com/aaron-philipp/corkscrew/blob/main/CHANGELOG.md"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
include = ["corkscrew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
